<resources>
    <string name="app_name">sboulet-reflex</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_singleplayer">Single Player</string>

    <string name="title_activity_player_select">Choose Number of Players</string>

    <string name="title_activity_two_player">Two Players</string>
    <string name="title_activity_three_player">Three Players</string>
    <string name="title_activity_four_player">Four Players</string>

    <string name="title_activity_statistics_select">Statistics</string>

    <string name="title_activity_clear">Warning!</string>
    <string name="title_activity_email">Email Statistics</string>

    <string name="title_activity_reaction_time_select">Choose Stats to View</string>
    <string name="title_activity_minimum_reaction">Minimum of Reaction Times</string>
    <string name="title_activity_maximum_reaction">Maximum of Reaction Times</string>
    <string name="title_activity_average_reaction">Average of Reaction Times</string>
    <string name="title_activity_median_reaction">Median of Reaction Times</string>

    <string name="title_activity_player_press_select">Stats by Number of Players</string>
    <string name="title_activity_two_player_press">Two Player Press Count</string>
    <string name="title_activity_three_player_press">Three Player Press Count</string>
    <string name="title_activity_four_player_press">Four Player Press Count</string>

    <string name="single">Single Player</string>
    <string name="gameshow">Gameshow Buzzer</string>
    <string name="stats">Statistics</string>

    <string name="two">Two Players</string>
    <string name="three">Three Players</string>
    <string name="four">Four Players</string>

    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>

    <string name="reactiontimes">Reaction Times</string>
    <string name="playerpresses">Player Presses</string>
    <string name="clear">Clear Reaction Times and Player Presses</string>
    <string name="email">E-mail Statistics</string>

    <string name="minimum">Minimum</string>
    <string name="maximum">Maximum</string>
    <string name="average">Average</string>
    <string name="median">Median</string>

    <string name="min">Minimum of All / 10 / 100 Reaction Times: </string>
    <string name="max">Maximum of All / 10 / 100 Reaction Times: </string>
    <string name="avg">Average of All / 10 / 100 Reaction Times: </string>
    <string name="med">Median of All / 10 / 100 Reaction Times: </string>

    <string name="p2count">Two Player Mode Counts (P1 / P2): </string>
    <string name="p3count">Three Player Mode Counts (P1 / P2 / P3): </string>
    <string name="p4count">Four Player Mode Counts (P1 / P2 / P3 / P4): </string>

    <string name="minall">Minimum of All Reaction Times: </string>
    <string name="min10">Minimum of Last 10 Reaction Times: </string>
    <string name="min100">Minimum of Last 100 Reaction Times: </string>

    <string name="maxall">Maximum of All Reaction Times: </string>
    <string name="max10">Maximum of Last 10 Reaction Times: </string>
    <string name="max100">Maximum of Last 100 Reaction Times: </string>

    <string name="avgall">Average of All Reaction Times: </string>
    <string name="avg10">Average of Last 10 Reaction Times: </string>
    <string name="avg100">Average of Last 100 Reaction Times: </string>

    <string name="medall">Median of All Reaction Times: </string>
    <string name="med10">Median of Last 10 Reaction Times: </string>
    <string name="med100">Median of Last 100 Reaction Times: </string>

    <string name="p1press">Player 1 Count: </string>
    <string name="p2press">Player 2 Count: </string>
    <string name="p3press">Player 3 Count: </string>
    <string name="p4press">Player 4 Count: </string>

    <string name="clear_sure">Clearing your stats will prevent you from viewing statistic info and e-mailing them.</string>
    <string name="title_activity_stat_view">StatViewActivity</string>


</resources>
