<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/minimum"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/minimum" />

    <Button
        android:id="@+id/maximum"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maximum" />

    <Button
        android:id="@+id/average"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/average" />

    <Button
        android:id="@+id/median"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/median" />

    <Button
        android:id="@+id/clear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />


</LinearLayout>