<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/reaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reactiontimes" />

    <Button
        android:id="@+id/player"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/playerpresses" />

    <Button
        android:id="@+id/clear"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear" />

    <Button
        android:id="@+id/email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/email" />
</LinearLayout>