<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <Button
        android:id="@+id/two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/two" />

    <Button
        android:id="@+id/three"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/three" />

    <Button
        android:id="@+id/four"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/four" />


</LinearLayout>
