<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    android:paddingBottom="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/player1buzzer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background = "@drawable/selector"
        android:text="@string/player1"/>

    <Button
        android:id="@+id/player2buzzer"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toRightOf="@+id/player1buzzer"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:background = "@drawable/selector"
        android:text="@string/player2"/>

    <Button
        android:id="@+id/player3buzzer"
        android:layout_marginTop="225dp"
        android:layout_marginLeft="100dp"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:background = "@drawable/selector"
        android:text="@string/player3"/>


</RelativeLayout>
